# openthoughts-agent

./: .gitignore  README.md  next_steps.md  pyproject.toml
analysis/: DATASET_STATS.md  dataset_stats.json
src/ot_agent_v1/: __init__.py  debug_async.py  env.py  evaluator.py  main.py
